Run multiple JGroups configs from the dist script